--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang=en>
 <head>
-
+  <title>Error-404</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../Normalize.css">
-	<link rel="stylesheet" href="styles.css"
-  <title>Error-404</title>
+	<link rel="stylesheet" href="styles.css">
+
 
 </head>
 <body>
-
+  <div class="Container">
+  <p>
+    Error 404!<br>
+    We seem to have lost this page...<br>
+    But no worries, the penguins are already looking for it!<br>
+    Check out these other links while waiting. <br>
 </body>
 </html>
