--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
   <div class="Container">
-  <p>
-    Error 404!<br>
+    Error 404!
+    <div class="Message">
     We seem to have lost this page...<br>
     But no worries, the penguins are already looking for it!<br>
     Check out these other links while waiting. <br>
+    </div>
+    <div class="Links">
+        links
+    </div> 
 </body>
 </html>
