--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <div class="Container">
+    <div class="Error">
     Error 404!
+    </div>
     <div class="Message">
     We seem to have lost this page...<br>
     But no worries, the penguins are already looking for it!<br>
@@ -18,6 +20,6 @@
     </div>
     <div class="Links">
         links
-    </div> 
+    </div>
 </body>
 </html>
