--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="Container">
     <div class="Error">
-    Error 404!
+    <img src="404.png" alt="404"></img>
     </div>
     <div class="Message">
     We seem to have lost this page...<br>
