--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <div class="Message">
     We seem to have lost this page...<br>
     But no worries, the penguins are already looking for it!<br>
-    Check out these other links while waiting. <br>
+    </div>
+    <div class="Linktext">
+    <br>Check out these other links while waiting. <br>
     </div>
     <div class="Links">
-        links
+        <a href="https://www.discoverwildlife.com/animal-facts/birds/facts-about-penguins/"><button class="button">Penguin fun facts!</button></a>
+        <a href="https://github.com/Anton90"><button class="button">Back to Github</button></a>
     </div>
 </body>
 </html>
