--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     But no worries, the penguins are already looking for it!<br>
     </div>
     <div class="Linktext">
-    <br>Check out these other links while waiting. <br>
+    <br>Go back to the previous page or learn something new while you're here.<br><br>
     </div>
     <div class="Links">
-        <a href="https://www.discoverwildlife.com/animal-facts/birds/facts-about-penguins/"><button class="button">Penguin fun facts!</button></a>
         <a href="https://github.com/Anton90"><button class="button">Back to Github</button></a>
+        <a href="https://www.discoverwildlife.com/animal-facts/birds/facts-about-penguins/"><button class="button">Penguin fun facts!</button></a>
     </div>
 </body>
 </html>
