--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=en>
 <head>
   <title>Error-404</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../Normalize.css">
 	<link rel="stylesheet" href="styles.css">
 
@@ -17,7 +18,7 @@
     But no worries, the penguins are already looking for it!<br>
     </div>
     <div class="Linktext">
-    <br>Go back to the previous page or learn something new while you're here.<br><br>
+    Go back to the previous page or learn something new while you're here.<br>
     </div>
     <div class="Links">
         <a href="https://github.com/Anton90"><button class="button">Back to Github</button></a>
