--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     But no worries, the penguins are already looking for it!<br>
     </div>
     <div class="Linktext">
-    Go back to the previous page or learn something new while you're here.<br>
+    <br>Go back to the previous page or learn something new while you're here.<br>
     </div>
     <div class="Links">
         <a href="https://github.com/Anton90"><button class="button">Back to Github</button></a>
